--- a/apps/templates/base.html
+++ b/apps/templates/base.html
@@ -14,70 +14,35 @@
     <link href="https://fonts.googleapis.com/css?family=Droid+Serif" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Iceland" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-{#  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">#}
-{#  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>#}
-          <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-{#  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>#}
-
       {% block title %}
 
     {% endblock %}
 
   </head>
 <body>
-  <nav class="navbar navbar-default navbar-fixed-top">
+    <div class="main">
       <div class="container-fluid">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-{#          <a class="navbar-brand" href="{% url 'home' %}">Connect4</a>#}
-        </div>
-      </div>
-</nav>
+        {% block body %}
 
-<div class="main">
-  <div class="container-fluid">
-    {% block body %}
-
-    {% endblock %}
-  </div>
-</div>
-
-<footer class="footer">
-  <div class="container">
-    <div class="row">
-      <div class="col-xs-12">
-        <div class="media">
-          <div class="media-body">
-            <h5 class="media-heading">&copy; 2017 Clovis Djiometsa</h5>
-          </div>
-          <div class="media-right">
-            <img src="{% static 'images/logo.png'%}" class="media-object" alt="logo">
-          </div>
-        </div>
+        {% endblock %}
       </div>
     </div>
-  </div>
-</footer>
-{#{% block javascript %}#}
-{#  <script type="text/javascript">#}
-{#  $(document).ready(function() {#}
-{##}
-{#    $( window ).resize(function() {#}
-{##}
-{#      if( $(window).width() < 765 ) {#}
-{#        $('.separator').addClass('hidden');#}
-{#      }else {#}
-{#        $('.separator').removeClass('hidden');#}
-{#      }#}
-{#    }).resize();#}
-{##}
-{#  })#}
-{#  </script>#}
-{#{% endblock %}#}
+
+    <footer class="footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-12">
+              <div class="col-xs-6" style="padding-right: 0px">
+                  <h5 class="media-heading" style="text-align: right; color: #ffffff; margin: 3px 0px 0px 0px">&copy; {{ year }}</h5>
+              </div>
+              <div class="col-xs-6">
+                  <img src="{% static 'images/logo.png'%}" class="media-object" alt="logo" style="width: 30px">
+              </div>
+          </div>
+        </div>
+      </div>
+    </footer>
 </body>
 </html>
