--- a/apps/templates/user_registration/registration_form.html
+++ b/apps/templates/user_registration/registration_form.html
@@ -8,10 +8,10 @@
     <div class="col-sm-4 col-sm-offset-4">
       <div class="jumbotron" style="background-color: rgba(250,250,250,0.92);">
         <div class="row" style="padding-bottom: 50px; border-bottom: solid 1px rgba(250,250,250,0.96); height: auto">
-          <div class="col-md-6 col-sm-3" style="border-right: solid 1px rgb(178,177,177)">
+          <div class="col-md-6 col-xs-6" style="border-right: solid 1px rgb(178,177,177)">
             <h3 style="text-align: right; margin-right: 10px; height: 60px; padding-top: 15px">{{ association.label|title }}</h3>
           </div>
-            <div class="col-md-6 col-sm-3">
+            <div class="col-md-6 col-xs-6">
             <h3 style="text-align: left; margin-left: 10px; height: 60px; padding-top: 15px">Registration</h3>
           </div>
         </div>
