Add host in template

--- a/apps/templates/emails/base.html
+++ b/apps/templates/emails/base.html
@@ -128,7 +128,7 @@
                   <tbody>
                     <tr>
                       <td align="center" style="font-size:0px;padding:5px 12px;word-break:break-word;">
-                          <div style="float: left;"><img src="{% static 'images/logo.png'%}" class="media-object" alt="logo" style="width: 40px"></div>
+                          <div style="float: left;"><img src="{{ host }}{% static 'images/logo.png'%}" class="media-object" alt="logo" style="width: 40px"></div>
                           <div style="font-family:Montserrat, Helvetica, Arial, sans-serif;font-size:30px;font-weight:550;line-height:24px;text-align:center;color:#012970;">Djanghi</div>
                       </td>
                     </tr>
@@ -186,7 +186,7 @@
                           <tbody>
                             <tr>
                               <td style="width:600px;">
-                                <img alt="bottom border" height="auto" src="{% static 'images/email-bottom.png'%}" style="border:none;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="600" />
+                                <img alt="bottom border" height="auto" src="{{ host }}{% static 'images/email-bottom.png'%}" style="border:none;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="600" />
                               </td>
                             </tr>
                           </tbody>
