--- a/apps/statics/css/base.css
+++ b/apps/statics/css/base.css
@@ -1,60 +1,96 @@
-/*body styling*/
-html{
-  height: 100%;
-  width: 100%;
-  box-sizing: border-box;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+:root {
+  scroll-behavior: smooth;
 }
 
-*, *:before, *:after {
-  box-sizing: inherit;
+body {
+  font-family: "Open Sans", sans-serif;
+  background: #f6f9ff;
+  color: #444444;
 }
 
-body{
-  overflow-x: hidden;
-  position: relative;
-  margin: 0;
+a {
+  color: #4154f1;
+  text-decoration: none;
 }
 
-.main{
-  padding-top: 5em;
-  min-height: 100%;
-  min-height: 100vh;
+a:hover {
+  color: #717ff5;
+  text-decoration: none;
 }
 
-/*footer styling*/
-.footer {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  padding: 0.5rem;
-  background-color: #010921;
-  text-align: center;
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Nunito", sans-serif;
 }
 
-.footer .row{
-  position: relative;
+.pagetitle {
+  margin-bottom: 10px;
+}
+.pagetitle h1 {
+  font-size: 24px;
+  margin-bottom: 0;
+  font-weight: 600;
+  color: #012970;
 }
 
-.footer .row .media-body h5{
-  display: block;
-  margin: 0 auto;
-  color: #FFF;
+.card {
+  margin-bottom: 30px;
+  border: none;
+  border-radius: 5px;
+  box-shadow: 0px 0 30px rgba(1, 41, 112, 0.1);
 }
 
-.footer .row .media-body{
-  padding: 8px;
+.card-header, .card-footer {
+  border-color: #ebeef4;
+  background-color: #fff;
+  color: #798eb3;
+  padding: 15px;
 }
 
-.footer .row .media .media-right{
-  padding: 8px 5px 3px 5px;
+.card-title {
+  padding: 20px 0 15px 0;
+  font-size: 18px;
+  font-weight: 500;
+  color: #012970;
+  font-family: "Poppins", sans-serif;
+}
+.card-title span {
+  color: #899bbd;
+  font-size: 14px;
+  font-weight: 400;
+}
+.card-body {
+  padding: 0 20px 20px 20px;
 }
 
-.footer .row .media .media-right img{
-  /*height: 15px;*/
-  width: 30px;
+.logo {
+  line-height: 1;
+}
+
+.logo img {
+  max-height: 26px;
+  margin-right: 6px;
+}
+.logo span {
+  font-size: 32px;
+  font-weight: 700;
+  color: #012970;
+  font-family: "Nunito", sans-serif;
+}
+
+.spacer {
+  padding-top: 7px;
+  padding-bottom: 5px;
+}
+
+.credits .copyright > a {
+  color: inherit;
+}
+
+.header {
+  transition: all 0.5s;
+  z-index: 997;
+  height: 60px;
+  box-shadow: 0px 2px 20px rgba(1, 41, 112, 0.1);
+  background-color: #fff;
+  padding-left: 20px;
 }
