Update registration form text

--- a/apps/templates/emails/registration.html
+++ b/apps/templates/emails/registration.html
@@ -1,7 +1,7 @@
 {% extends "emails/base.html" %}
 
 {% block title %}
- <title>Djanghi - Registration invite</title>
+ <title>Djanghi - Registration</title>
 {% endblock %}
 
 
@@ -24,8 +24,8 @@
                 <tr>
                   <td align="left" style="font-size:0px;padding:10px 40px 10px 40px;word-break:break-word;">
                       <div style="font-family:Montserrat, Helvetica, Arial, sans-serif;font-size:16px;font-weight:300;line-height:40x;text-align:left;color:#666666;">
-                          On behalf of <strong>{{ association_label }}</strong>, we are excited to invite yo to our platform.
-                          Where you can track your association payments, status, events and many more.
+                          <strong>{{ association_label }}</strong>, is excited to invite you to join the <strong>Djanghi</strong> platform;
+                          Where you can track your association payments and many more.
                       </div>
                   </td>
                 </tr>
