--- a/apps/templates/emails/registration.html
+++ b/apps/templates/emails/registration.html
@@ -17,20 +17,20 @@
             <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="vertical-align:top;" width="100%">
               <tbody>
                 <tr>
-                  <td align="left" style="font-size:0px;padding:30px 40px 10px 40px;word-break:break-word;">
+                  <td align="left" style="font-size:0px;padding:30px 4px 10px 4px;word-break:break-word;">
                     <div style="font-family:Montserrat, Helvetica, Arial, sans-serif;font-size:16px;font-weight:300;line-height:40x;text-align:left;color:#666666;">Hello,</div>
                   </td>
                 </tr>
                 <tr>
-                  <td align="left" style="font-size:0px;padding:10px 40px 10px 40px;word-break:break-word;">
+                  <td align="left" style="font-size:0px;padding:10px 4px 10px 4px;word-break:break-word;">
                       <div style="font-family:Montserrat, Helvetica, Arial, sans-serif;font-size:16px;font-weight:300;line-height:40x;text-align:left;color:#666666;">
-                          <strong>{{ association_label }}</strong>, is excited to invite you to join the <strong>Djanghi</strong> platform;
+                          <strong>{{ association_label }}</strong>, is excited to invite you to join their <strong>Djanghi</strong> account.<br>
                           Where you can track your association payments and many more.
                       </div>
                   </td>
                 </tr>
                 <tr>
-                  <td align="left" style="font-size:0px;padding:10px 40px 20px 40px;word-break:break-word;">
+                  <td align="left" style="font-size:0px;padding:10px 4px 20px 4px;word-break:break-word;">
                     <div style="font-family:Montserrat, Helvetica, Arial, sans-serif;font-size:16px;font-weight:300;line-height:40x;text-align:left;color:#666666;">Please click the button below to complete your registration.</div>
                   </td>
                 </tr>
@@ -48,31 +48,31 @@
                   </td>
                 </tr>
                 <tr>
-                  <td align="left" style="font-size:0px;padding:10px 40px 10px 40px;word-break:break-word;">
+                  <td align="left" style="font-size:0px;padding:10px 4px 10px 4px;word-break:break-word;">
                     <div style="font-family:Montserrat, Helvetica, Arial, sans-serif;font-size:16px;font-weight:300;line-height:40x;text-align:left;color:#666666;">If that doesn't work, copy and paste the following link in your browser:</div>
                   </td>
                 </tr>
                 <tr>
-                  <td align="left" style="font-size:0px;padding:10px 40px 10px 40px;word-break:break-word;">
+                  <td align="left" style="font-size:0px;padding:10px 4px 10px 4px;word-break:break-word;">
                     <div style="font-family:Montserrat, Helvetica, Arial, sans-serif;font-size:16px;font-weight:300;line-height:40x;text-align:left;color:#666666;">
                         {{ registration_link }}
                     </div>
                   </td>
                 </tr>
                 <tr>
-                  <td align="left" style="font-size:0px;padding:10px 40px 10px 40px;word-break:break-word;">
+                  <td align="left" style="font-size:0px;padding:10px 4px 10px 4px;word-break:break-word;">
                     <div style="font-family:Montserrat, Helvetica, Arial, sans-serif;font-size:16px;font-weight:300;line-height:40x;text-align:left;color:#666666;">
                         For any other questions, please contact your association administrators or send an email at <strong>info@djanghi.com</strong>
                     </div>
                   </td>
                 </tr>
                 <tr>
-                  <td align="left" style="font-size:0px;padding:10px 40px 10px 40px;word-break:break-word;">
+                  <td align="left" style="font-size:0px;padding:10px 4px 10px 4px;word-break:break-word;">
                     <div style="font-family:Montserrat, Helvetica, Arial, sans-serif;font-size:16px;font-weight:300;line-height:40x;text-align:left;color:#666666;">Cheers,</div>
                   </td>
                 </tr>
                 <tr>
-                  <td align="left" style="font-size:0px;padding:10px 40px 30px 40px;word-break:break-word;">
+                  <td align="left" style="font-size:0px;padding:10px 4px 30px 4px;word-break:break-word;">
                     <div style="font-family:Montserrat, Helvetica, Arial, sans-serif;font-size:16px;font-weight:300;line-height:40x;text-align:left;color:#666666;">Djanghi Team</div>
                   </td>
                 </tr>
