--- a/apps/templates/emails/base.html
+++ b/apps/templates/emails/base.html
@@ -103,7 +103,7 @@
 </head>
 
 <body style="word-spacing:normal;background-color:#f6f9ff;">
-  <div style="background-color:#F2F2F2;">
+  <div style="background-color:#f6f9ff;">
     <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" style="width:600px;" width="600" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
     <div style="margin:0px auto;max-width:600px;">
       <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width:100%;">
