--- a/apps/templates/emails/membership-payment-notification.html
+++ b/apps/templates/emails/membership-payment-notification.html
@@ -7,7 +7,7 @@
 
 {% block body %}
 <!--[if mso | IE]></td></tr></table><table align="center" border="0" cellpadding="0" cellspacing="0" class="" style="width:600px;" width="600" bgcolor="#FFFFFF" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
-<div style="background:#FFFFFF;background-color:#FFFFFF;margin:0px auto;max-width:600px;box-shadow: 30px 30px 30px -30px rgb(1 41 112 / 10%);">
+<div style="background:#FFFFFF;background-color:#FFFFFF;margin:0px auto;max-width:600px;">
   <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#FFFFFF;background-color:#FFFFFF;width:100%;">
     <tbody>
       <tr>
