--- a/apps/templates/emails/base.html
+++ b/apps/templates/emails/base.html
@@ -102,8 +102,8 @@
   </style>
 </head>
 
-<body style="word-spacing:normal;background-color:#f6f9ff;">
-  <div style="background-color:#f6f9ff;">
+<body style="word-spacing:normal;background-color:#f1f1f1;">
+  <div style="background-color:#f1f1f1;">
     <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" style="width:600px;" width="600" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
     <div style="margin:0px auto;max-width:600px;">
       <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width:100%;">
