--- a/apps/templates/emails/base.html
+++ b/apps/templates/emails/base.html
@@ -102,8 +102,8 @@
   </style>
 </head>
 
-<body style="word-spacing:normal;background-color:#f6f9ff;">
-  <div style="background-color:#f6f9ff;">
+<body style="word-spacing:normal;background-color:#F2F2F2;">
+  <div style="background-color:#F2F2F2;">
     <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" style="width:600px;" width="600" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
     <div style="margin:0px auto;max-width:600px;">
       <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width:100%;">
@@ -146,7 +146,7 @@
       <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#FFFFFF;background-color:#FFFFFF;width:100%;">
         <tbody>
           <tr>
-            <td style="direction:ltr;font-size:0px;padding:10px 60px 0 60px;text-align:center;">
+            <td style="direction:ltr;font-size:0px;padding:10px 25px 0 25px;text-align:center;">
               <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:top;width:196px;" ><![endif]-->
               <div class=" mj-outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;">
                 <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="vertical-align:top;" width="100%">
