Implement IncludedUserModelSerializer and add author to transaction emails

--- a/apps/templates/emails/base.html
+++ b/apps/templates/emails/base.html
@@ -77,6 +77,12 @@
         max-width: 100%;
       }
     }
+      .payment-table {
+          overflow-x: scroll;
+      }
+      .payment-table th, td {
+          min-width: 85px;
+      }
   </style>
   <style media="screen and (min-width:480px)">
     .moz-text-html .mj-column-per-35 {
